fix(footer): scrollable menu on small viewports

--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -14,3 +14,11 @@
 .container.space-for-cookies-consent {
 	margin-bottom: 105px;
 }
+
+.menu {
+	overflow-x: scroll;
+	display: flex;
+	flex-wrap: nowrap;
+	max-width: 100vw;
+	padding: 0 10px 5px 10px;
+}
